# 6502-CPU-Emulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  main.cpp  rebuild.bat  rebuild.ps1  rebuild.sh  setup-git-hooks.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
include/cpu6502/: cpu.hpp  error.hpp  memory.hpp  opcodes.hpp  status_flags.hpp  types.hpp
src/: cpu.cpp  cpu.h  cpu_instructions.cpp  main.cpp  memory.cpp  version.h.in
tests/: test_adc.cpp  test_and.cpp  test_asl.cpp  test_control_flow.cpp  test_cpu.cpp  test_lda.cpp  test_ldxy.cpp
